# yzix-v0

./: .gitignore  Cargo.toml  README.md  TODO
crates/ciborium/: Cargo.toml
crates/ciborium/src/de/: error.rs  mod.rs
crates/yzix-client/: Cargo.toml
crates/yzix-client/src/: main.rs
crates/yzix-core/: Cargo.toml
crates/yzix-core/src/: build_graph.rs  lib.rs  proto.rs  store.rs  strwrappers.rs
crates/yzix-core/src/build_graph/: eval.rs  mod.rs
crates/yzix-daemon/: Cargo.toml
crates/yzix-daemon/src/: main.rs
crates/yzix-pool/: Cargo.toml
crates/yzix-pool/src/: lib.rs
crates/yzix-server/: Cargo.toml
crates/yzix-server/src/: clients.rs  fetch.rs  in2_helpers.rs  main.rs  utils.rs
crates/yzix-store/: Cargo.toml
crates/yzix-store/src/: dump.rs  lib.rs
docs/: hi.sh  server_cfg_example.toml
docs/boots00/: graph.json
docs/boots00/assets/: alpine-gen-dl-pkg.sh  alpine-reduce.sh  unpack-tgz.sh
docs/boots01/: setup.sh
docs/example-graphs/: 00.json  01.json  02.json
