[package]
name = "yzix-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
thiserror = "1.0"

[dependencies.camino]
version = "1.0"
features = ["serde1"]

[dependencies.ciborium]
version = "0.2"
features = ["std"]

[dependencies.petgraph]
version = "0.6"
default-features = false
features = ["serde-1", "stable_graph"]

[dependencies.reqwest]
version = "0.11"
default-features = false
optional = true

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive", "rc", "std"]

[dependencies.serde_json]
version = "1.0"
default-features = false
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.url]
version = "2.2"
features = ["serde"]

[dependencies.yzix-store]
path = "../yzix-store"
version = "0.1"
