[package]
name = "yzix-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
async-channel = "1.6"
async-ctrlc = "1.2"
async-lock = "2.4"
async-net = "1.6"
async-process = "1.3"
bit-set = "0.5"
futures-lite = "1.12"
futures-util = "0.3"
indicatif = "0.16"
num_cpus = "1.13"
oci-spec = "0.5"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.2"
thiserror = "1.0"
toml = "0.5"
yz-server-executor = "0.2"

[dependencies.yzix-core]
path = "../yzix-core"

[target.'cfg(unix)'.dependencies]
nix = "0.23"
