[package]
name = "yzix-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
async-channel = "1.6"
async-process = "1.3"
bit-set = "0.5"
num_cpus = "1.13"
oci-spec = "0.5"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.2"
thiserror = "1.0"
toml = "0.5"

[dependencies.futures-util]
version = "0.3"
features = ["io"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.smallvec]
version = "1.7"
features = ["union"]

[dependencies.tokio]
version = "1"
features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync"]

[dependencies.yzix-core]
path = "../yzix-core"
features = ["reqwest", "serde_json"]
