[package]
name = "yzix-store"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
blake2 = "0.9"
filetime = "0.2"
once_cell = "1.8"
thiserror = "1.0"

[dependencies.base64]
git = "https://github.com/marshallpierce/rust-base64.git"
branch = "master"

[dependencies.camino]
version = "1.0"
features = ["serde1"]

[dependencies.ciborium]
version = "0.2"
features = ["std"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive", "std"]

[target.'cfg(unix)'.dependencies]
xattr = "0.2"

[dev-dependencies]
serde_test = "1.0"
